# minikube

./: Cargo.toml  Dockerfile  README.md  kubernetes-deployment.yaml  script-test.sh  sonar-project.properties
.github/workflows/: ci.yml
hello-rust/: Chart.yaml  values.yaml
hello-rust/templates/: kubernetes-deployment.yaml
src/: main.rs
